--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -137,4 +137,5 @@
     <color name="color_007DFF">#007DFF</color>
     <color name="color_F4F3F3">#F4F3F3</color>
     <color name="color_FF5561">#FF5561</color>
+    <color name="color_33000">#33000000</color>
 </resources>
